--- a/samples/SphereGravity/vc2013/SphereGravity.vcxproj
+++ b/samples/SphereGravity/vc2013/SphereGravity.vcxproj
@@ -102,7 +102,7 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup>
-    <ClCompile Include="..\..\SphereGravity_\src\Light.cpp" />
+    <ClCompile Include="..\src\Light.cpp" />
     <ClCompile Include="..\src\SphereGravityApp.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\BulletContext.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\Common.cpp" />
@@ -112,8 +112,8 @@
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\SoftBody.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\SphereGravity_\include\Body.h" />
-    <ClInclude Include="..\..\SphereGravity_\include\Light.h" />
+    <ClInclude Include="..\include\Body.h" />
+    <ClInclude Include="..\include\Light.h" />
     <ClInclude Include="..\include\Resources.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\btBulletCollisionCommon.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\btBulletDynamicsCommon.h" />
